# TemplateQt

./: CMakeLists.txt  Main.qml  main.cpp
Components/core/: CMakeLists.txt
Components/core/include/: HelloWorld.h
Components/core/src/: HelloWorld.cpp
Content/: App.qml  CMakeLists.txt  Content.qmlproject.qtds  Images.qrc  MainForm.ui.qml
